<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <DUT Name="CommandBlockGeneric" Id="{62c6cccb-2d2a-4621-abb3-49c6aff3e548}">
    <Declaration><![CDATA[TYPE CommandBlockGeneric :
UNION
	base : CommandBlockBase;
	position : CommandBlockPos;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>